Layout bug fix. Fixed section description layout, when the text is shorter than example. Fixed alert layout when there's more than one section added. Made section module/template easier to reuse and add new sections.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,11 @@ $primary: #e4c1ae;
   height: 100%;
 }
 
+.section__right {
+
+  width: 100%;
+}
+
 .section__title {
   margin-bottom: 0.5em;
   font-size: 30px;
@@ -61,7 +66,7 @@ $primary: #e4c1ae;
   background-color: whitesmoke;
   height: 210px;
   max-width: 920px;
-  position: absolute;
+  position: fixed;
   z-index: 999;
   top: 375px;
   left: 0;
@@ -131,7 +136,7 @@ $primary: #e4c1ae;
   width: 100%;
   height: 100%;
   opacity: 50%;
-  position: absolute;
+  position:fixed;
   top: 0;
   left: 0;
   background-color: $dark;
